crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__month__error__error_named_invalid.snap
---
source: crates/tools/cron/src/tests/unit/month.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "INVALID",
                    Tag,
                ),
                Nom(
                    "INVALID",
                    Alt,
                ),
                Nom(
                    "INVALID",
                    Alt,
                ),
                Nom(
                    "INVALID",
                    Alt,
                ),
            ],
        },
    ),
)
