crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__month__error__error_named_periodic_invalid.snap
---
source: crates/tools/cron/src/tests/unit/month.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "INVALID/2",
                    Tag,
                ),
                Nom(
                    "INVALID/2",
                    Alt,
                ),
                Nom(
                    "INVALID/2",
                    Alt,
                ),
                Nom(
                    "INVALID/2",
                    Alt,
                ),
            ],
        },
    ),
)
