crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__month__error__error_range_numeric_periodic_invalid.snap
---
source: crates/tools/cron/src/tests/unit/month.rs
expression: result
---
Ok(
    (
        "3-MAR/2",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        January,
                        January,
                    ),
                    periodic: MonthPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
